kubernetes/applications/trek/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trek
  labels:
    app.kubernetes.io/name: trek
    app.kubernetes.io/part-of: everlab
